Web API Server: add await to using + implement POST, PUT and DELETE actions
